[package]
name = "icp_smart_contract_weather_app_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
target = "wasm32-unknown-unknown"

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
serde = "1"
serde_json = "1.0"
ic-cdk-macros = "0.8"
ic-stable-structures = "0.6"